# protohacker

0-smoke-test/: Cargo.toml  Dockerfile  Justfile  fly.toml
0-smoke-test/src/: main.rs
1-prime-time/: Cargo.toml  Dockerfile  fly.toml
1-prime-time/src/: main.rs
2-means-to-an-end/: .env  Cargo.toml  Dockerfile  fly.toml
2-means-to-an-end/src/: main.rs
3-budget-chat/: .env  Cargo.toml  Dockerfile  fly.toml
3-budget-chat/src/: main.rs
4-unusual-database/: .env  Cargo.toml  Dockerfile  fly.toml
4-unusual-database/src/: main.rs
5-mob-in-the-middle/: .env  Cargo.toml  Dockerfile  fly.toml
5-mob-in-the-middle/src/: main.rs
otel-exporter/: Dockerfile  fly.toml  otelcol.yaml
