[package]
name = "means-to-an-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
color-eyre = "0.6.2"
dotenv = "0.15.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0" }
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.8.3"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
